# DiVit

./: .gitignore  pyproject.toml
model/: divit.py  encoder.py  input_layers.py  positional_embedding.py  utils.py
training/: train_classifier.py
training/data/: dataloader.py
